--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <gradient
-            android:angle="135"
-            android:centerColor="#009688"
-            android:endColor="#00695C"
-            android:startColor="#4DB6AC"
-            android:type="linear"/>
+    <gradient android:type="linear" android:startColor="@color/darkBlue"
+              android:endColor="@color/lightBlue" android:angle="360"/>
 </shape>
