--- a/app/src/main/res/layout/activity_vendor_details.xml
+++ b/app/src/main/res/layout/activity_vendor_details.xml
@@ -5,12 +5,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".home.HomeActivity">
+        tools:context=".vendorDetails.VendorDetailsActivity">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical">
         <com.google.android.material.appbar.AppBarLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -25,11 +24,6 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <!--<include layout="@layout/content_home"/>-->
-        <FrameLayout android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:id="@+id/frame"
-        />
+        <include layout="@layout/content_vendor_details"/>
     </LinearLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
