--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
     <color name="white">#ffffff</color>
     <color name="darkBlue">#0A80F5</color>
     <color name="lightBlue">#0BCCEB</color>
+
+    <color name="light_gray">#E0E0E0</color>
+    <color name="medium_gray">#B8B7B7</color>
 </resources>
