--- a/app/src/main/res/drawable/form_inputs.xml
+++ b/app/src/main/res/drawable/form_inputs.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="283dp" android:height="48dp">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#A8A4A4"/>
+            <stroke android:width="2dp" android:color="@color/light_gray"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
