--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,7 +13,6 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/constraintLayout"
-            style="@style/subBackgroundStyle"
             android:layout_height="571dp"
             android:layout_width="350dp">
 
@@ -82,7 +81,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.533"
-                style="@style/btnStyle"
+                style="@style/primary_btn_style"
                 android:layout_marginBottom="4dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/location"/>
 
