--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -27,7 +27,7 @@
 
         <!--<include layout="@layout/content_home"/>-->
         <FrameLayout android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
+                     android:layout_height="match_parent"
                      android:id="@+id/frame"
         />
     </LinearLayout>
