--- a/app/src/main/res/layout/item_view_vendor_prev.xml
+++ b/app/src/main/res/layout/item_view_vendor_prev.xml
@@ -20,7 +20,7 @@
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/iv_logo"/>
+                android:id="@+id/iv_vendor_logo"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
                 android:textSize="20sp"
                 android:id="@+id/tv_vendor_name"
                 android:layout_marginStart="8dp"
-                app:layout_constraintStart_toEndOf="@+id/iv_logo"/>
+                app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -39,7 +39,7 @@
                 android:text="Resturant"
                 app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name"
                 android:id="@+id/tv_type"
-                app:layout_constraintStart_toEndOf="@+id/iv_logo"
+                app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"
                 android:layout_marginStart="8dp"/>
 
         <TextView
