--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -12,6 +12,11 @@
                 android:id="@+id/nav_profile"
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="@string/profile"/>
+
+        <item
+                android:id="@+id/nav_qr_scanner"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="@string/qr_scanner"/>
     </group>
 
 </menu>
