Pilgrim sign in functionality implemented

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,11 +112,12 @@
         <item name="android:layout_marginBottom">20dp</item>
         <item name="android:layout_marginTop">8dp</item>
     </style>
+
     <style name="card">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">16dp</item>
-        <item name="android:elevation">6dp</item>
+        <item name="android:elevation">16dp</item>
+        <item name="android:layout_marginTop">24dp</item>
     </style>
 
 
