--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/constraintLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_color">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:id="@+id/constraintLayout2"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:background="@drawable/background_color">
 
     <TextView
             android:id="@+id/textView2"
@@ -17,31 +16,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.07999998"/>
 
-    <ScrollView
-            android:id="@+id/card"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+
+    <androidx.cardview.widget.CardView
+            app:cardCornerRadius="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView2"
-            app:layout_constraintVertical_bias="0.120000005"
-            app:layout_constraintWidth_percent=".85">
+            app:layout_constraintWidth_percent=".85"
+            style="@style/card">
 
-        <androidx.cardview.widget.CardView
+        <ScrollView
+                android:id="@+id/card"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:elevation="16dp"
-                android:layout_marginBottom="20dp"
-                app:cardCornerRadius="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="wrap_content">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,16 +36,8 @@
                     style="subBackgroundStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:padding="16dp">
-
-                <ProgressBar
-                        android:id="@+id/progress"
-                        style="@style/progressBarStyle"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@+id/checkBox"
-                        app:layout_constraintStart_toStartOf="@+id/checkBox"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.766"/>
 
                 <ImageView
                         android:id="@+id/logo"
@@ -69,7 +48,7 @@
                         app:layout_constraintTop_toTopOf="parent"/>
 
                 <EditText
-                        android:id="@+id/email"
+                        android:id="@+id/username"
                         style="@style/InputTextField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -83,7 +62,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/logo"/>
 
                 <EditText
-                        android:id="@+id/CRNNumber"
+                        android:id="@+id/password"
                         style="@style/InputTextField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -92,22 +71,22 @@
                         android:drawableEnd="@drawable/email"
                         android:hint="@string/password"
                         android:inputType="textPassword"
-                        app:layout_constraintEnd_toEndOf="@+id/email"
-                        app:layout_constraintStart_toStartOf="@+id/email"
-                        app:layout_constraintTop_toBottomOf="@+id/email"/>
+                        app:layout_constraintEnd_toEndOf="@+id/username"
+                        app:layout_constraintStart_toStartOf="@+id/username"
+                        app:layout_constraintTop_toBottomOf="@+id/username"/>
 
                 <CheckBox
-                        android:id="@+id/checkBox"
+                        android:id="@+id/remember_me"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="@string/remember_password"
+                        android:text="@string/remember_me"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="14sp"
-                        app:layout_constraintStart_toStartOf="@+id/CRNNumber"
-                        app:layout_constraintTop_toBottomOf="@+id/CRNNumber"/>
+                        app:layout_constraintStart_toStartOf="@+id/password"
+                        app:layout_constraintTop_toBottomOf="@+id/password"/>
 
-                <Button
+                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                         android:id="@+id/signIn"
                         style="@style/primary_btn_style"
                         android:layout_width="0dp"
@@ -115,9 +94,12 @@
                         android:layout_marginTop="16dp"
                         android:elevation="5dp"
                         android:text="@string/login_to_account"
-                        app:layout_constraintEnd_toEndOf="@+id/CRNNumber"
-                        app:layout_constraintStart_toStartOf="@+id/CRNNumber"
-                        app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
+                        app:layout_constraintEnd_toEndOf="@+id/password"
+                        app:layout_constraintStart_toStartOf="@+id/password"
+                        app:layout_constraintTop_toBottomOf="@+id/remember_me"
+                        app:spinning_bar_width="4dp"
+                        app:spinning_bar_color="@color/white"
+                        app:spinning_bar_padding="4dp"/>
 
                 <TextView
                         android:id="@+id/goToRegister"
@@ -137,12 +119,12 @@
                         android:background="@drawable/secondary_button"
                         android:elevation="5dp"
                         android:text="@string/login_to_account"
-                        app:layout_constraintEnd_toEndOf="@+id/CRNNumber"
-                        app:layout_constraintStart_toStartOf="@+id/CRNNumber"
+                        app:layout_constraintEnd_toEndOf="@+id/password"
+                        app:layout_constraintStart_toStartOf="@+id/password"
                         app:layout_constraintTop_toBottomOf="@+id/goToRegister"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
