--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -37,7 +37,7 @@
                 style="@style/InputTextField"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:id="@+id/email"
+                android:id="@+id/username"
                 android:drawableRight="@drawable/security"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -50,14 +50,14 @@
                 android:inputType="textPassword"
                 android:hint="CRN"
                 android:drawableRight="@drawable/security"
-                android:id="@+id/CRNNumber"
+                android:id="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0.491"
                 android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/email"/>
+                app:layout_constraintTop_toBottomOf="@+id/username"/>
 
         <EditText
                 style="@style/InputTextField"
@@ -71,7 +71,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0.576"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/CRNNumber"/>
+                app:layout_constraintTop_toBottomOf="@+id/password"/>
 
 
         <Button
