--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
 
     <color name="light_gray">#E0E0E0</color>
     <color name="medium_gray">#B8B7B7</color>
+    <color name="dark_gray">#757575</color>
+
 </resources>
