--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,29 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:id="@+id/constraintLayout2"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@drawable/background_color">
-
-    <TextView
-            android:id="@+id/textView2"
-            style="@style/pageTitleStyle"
-            android:text="@string/login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.07999998"/>
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintLayout2"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_color">
 
     <androidx.cardview.widget.CardView
             app:cardCornerRadius="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
             app:layout_constraintWidth_percent=".85"
-            style="@style/card">
+        style="@style/card"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ScrollView
                 android:id="@+id/card"
@@ -67,7 +57,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-
                         android:drawableEnd="@drawable/email"
                         android:hint="@string/password"
                         android:inputType="textPassword"
@@ -102,7 +91,7 @@
                         app:spinning_bar_padding="4dp"/>
 
                 <TextView
-                        android:id="@+id/goToRegister"
+                    android:id="@+id/textView"
                         style="@style/registerStyle"
                         android:layout_marginTop="8dp"
                         android:text="@string/or"
@@ -121,7 +110,7 @@
                         android:text="@string/login_to_account"
                         app:layout_constraintEnd_toEndOf="@+id/password"
                         app:layout_constraintStart_toStartOf="@+id/password"
-                        app:layout_constraintTop_toBottomOf="@+id/goToRegister"/>
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
