--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,168 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:background="@drawable/background_color"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_color">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/constraintLayout2">
-    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_margin="16dp"
+        android:elevation="16dp"
+        app:cardCornerRadius="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/constraintLayout"
-            android:layout_height="571dp"
-            android:layout_width="350dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent=".85">
 
-        <ImageView
-                android:id="@+id/logo"
-                android:src="@drawable/wallet_blue"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.457"
-                style="@style/logoImageStyle" android:layout_marginTop="12dp"/>
-        <EditText
-                style="@style/InputTextField"
-                android:hint="@string/shop_name"
-                android:id="@+id/shopName"
-                android:drawableRight="@drawable/person"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.432"
-                app:layout_constraintTop_toBottomOf="@+id/logo"
-                android:layout_marginTop="28dp"/>
-        <EditText
-                style="@style/InputTextField"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:id="@+id/username"
-                android:drawableRight="@drawable/security"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.447"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/shopName"/>
-
-        <EditText
-                style="@style/InputTextField"
-                android:inputType="textPassword"
-                android:hint="CRN"
-                android:drawableRight="@drawable/security"
-                android:id="@+id/password"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.491"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/username"/>
-
-        <EditText
-                style="@style/InputTextField"
-                android:inputType="text"
-                android:hint="@string/location"
-                android:drawableRight="@drawable/location"
-                android:id="@+id/location"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.576"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/password"/>
-
-
-        <Button
-                android:text="Sign Up "
-                android:id="@+id/signUp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.533"
-                style="@style/primary_btn_style"
-                android:layout_marginBottom="4dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/location"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <TextView
-            android:text="@string/sign_up_account"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            style="@style/pageTitleStyle"
+        <com.stepstone.stepper.StepperLayout
+            android:id="@+id/stepperLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:ms_activeStepColor="@color/darkBlue"
+            app:ms_backButtonColor="@color/medium_gray"
+            app:ms_bottomNavigationBackground="@android:color/transparent"
+            app:ms_completeButtonColor="@color/darkBlue"
+            app:ms_inactiveStepColor="@color/light_gray"
+            app:ms_nextButtonColor="@color/medium_gray"
+            app:ms_stepperType="dots" />
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <!--<LinearLayout-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--xmlns:tools="http://schemas.android.com/tools"-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:gravity="center"-->
-        <!--android:orientation="vertical"-->
-        <!--android:background="@drawable/background_color"-->
-        <!--tools:context=".Login.SignUpActivity.SignUpActivity">-->
-
-        <!--<de.hdodenhof.circleimageview.CircleImageView-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/profile_image"-->
-        <!--android:layout_width="96dp"-->
-        <!--android:layout_height="96dp"-->
-        <!--android:src="@drawable/upload"-->
-        <!--app:civ_border_width="2dp"-->
-        <!--app:civ_border_color="#FF000000"/>-->
-
-
-        <!--<com.google.android.material.textfield.TextInputLayout-->
-        <!--app:hintAnimationEnabled="true"-->
-        <!--android:hint="Shop Name"-->
-        <!--style="@style/EditTextTheme">-->
-        <!--<com.google.android.material.textfield.TextInputEditText-->
-        <!--style="@style/txtInputThem"/>-->
-        <!--</com.google.android.material.textfield.TextInputLayout>-->
-
-
-        <!--<com.google.android.material.textfield.TextInputLayout-->
-        <!--app:hintAnimationEnabled="true"-->
-        <!--android:hint="Password"-->
-        <!--style="@style/EditTextTheme">-->
-
-        <!--<com.google.android.material.textfield.TextInputEditText-->
-        <!--style="@style/txtInputThem"/>-->
-        <!--</com.google.android.material.textfield.TextInputLayout>-->
-
-
-        <!--<com.google.android.material.textfield.TextInputLayout-->
-        <!--app:hintAnimationEnabled="true"-->
-        <!--android:hint="CRN"-->
-        <!--style="@style/EditTextTheme">-->
-
-        <!--<com.google.android.material.textfield.TextInputEditText-->
-        <!--style="@style/txtInputThem"/>-->
-        <!--</com.google.android.material.textfield.TextInputLayout>-->
-
-
-        <!--<com.google.android.material.textfield.TextInputLayout-->
-        <!--app:hintAnimationEnabled="true"-->
-        <!--android:hint="Location"-->
-        <!--style="@style/EditTextTheme">-->
-
-        <!--<com.google.android.material.textfield.TextInputEditText-->
-        <!--style="@style/txtInputThem"/>-->
-        <!--</com.google.android.material.textfield.TextInputLayout>-->
-
-
-        <!--<Button-->
-        <!--android:text="Register"-->
-        <!--style="@style/buttonConfiguration"/>-->
-
-
-        <!--</LinearLayout>-->
