--- a/app/src/main/res/layout/item_view_vendor_prev.xml
+++ b/app/src/main/res/layout/item_view_vendor_prev.xml
@@ -1,73 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:elevation="8dp"
-        app:cardCornerRadius="8dp"
-        android:layout_margin="8dp">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:elevation="8dp"
+    app:cardCornerRadius="8dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
 
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/iv_vendor_logo"/>
+            android:id="@+id/iv_vendor_logo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/avatar_placeholder"
+            app:civ_border_color="@color/darkBlue"
+            app:civ_border_width="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="El Bek"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:id="@+id/tv_vendor_name"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"/>
+            android:id="@+id/tv_vendor_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="El Bek"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Resturant"
-                app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name"
-                android:id="@+id/tv_type"
-                app:layout_constraintStart_toEndOf="@+id/iv_vendor_logo"
-                android:layout_marginStart="8dp"/>
+            android:id="@+id/tv_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Resturant"
+            app:layout_constraintStart_toStartOf="@+id/tv_vendor_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5 feet away"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintBaseline_toBaselineOf="@+id/tv_vendor_name"
-                android:id="@+id/tv_distance"/>
-
-        <com.iarcuschin.simpleratingbar.SimpleRatingBar
-                android:layout_width="wrap_content"
-                android:id="@+id/rb_rating"
-                app:layout_constraintTop_toBottomOf="@+id/tv_distance"
-                android:layout_marginTop="4dp"
-                android:layout_height="wrap_content"
-                app:srb_starSize="15dp"
-                app:srb_starBorderWidth="0.5"
-                app:srb_numberOfStars="5"
-                app:srb_rating="3"
-                app:srb_starCornerRadius="4"
-                app:srb_stepSize="0.5"
-                app:srb_starsSeparation="0.3dp"
-                app:srb_borderColor="@color/darkBlue"
-                app:srb_fillColor="@color/lightBlue"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/tv_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="5 feet away"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tv_vendor_name"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
