Get vendor details

--- a/app/src/main/res/layout/fragment_account_data.xml
+++ b/app/src/main/res/layout/fragment_account_data.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/logo"
         style="@style/logoImageStyle"
-        android:src="@drawable/wallet_blue"
+        android:src="@drawable/hafezah_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:id="@+id/username"
         style="@style/InputTextField"
         android:layout_marginTop="32dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_user"
         android:hint="@string/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:id="@+id/email"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_email"
         android:hint="@string/email_address"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         android:id="@+id/password1"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_lock"
         android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:id="@+id/password2"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_lock"
         android:hint="@string/repeat_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
