--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -42,7 +42,7 @@
         android:id="@+id/first_name"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_user"
         android:hint="@string/first_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/last_name"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_user"
         android:hint="@string/last_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
         android:id="@+id/phone"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_phone"
         android:hint="@string/phone"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
         android:id="@+id/tv_nationality"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
-        android:drawableEnd="@drawable/email"
+        android:drawableEnd="@drawable/ic_flag"
         android:hint="@string/nationality"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
