--- a/app/src/main/res/layout/qr_scanner_fragment.xml
+++ b/app/src/main/res/layout/qr_scanner_fragment.xml
@@ -128,7 +128,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_money" />
 
-                <Button
+                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                     android:id="@+id/btn_purchase"
                     style="@style/primary_btn_style"
                     android:layout_width="0dp"
@@ -141,7 +141,11 @@
                     android:text="@string/transfer"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/et_pin" />
+                    app:layout_constraintTop_toBottomOf="@+id/et_pin"
+                    app:spinning_bar_color="@color/white"
+                    app:spinning_bar_padding="4dp"
+                    app:spinning_bar_width="4dp" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
