--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,7 @@
                 <ImageView
                         android:id="@+id/logo"
                         style="@style/logoImageStyle"
-                        android:src="@drawable/wallet_blue"
+                    android:src="@drawable/hafezah_logo"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"/>
@@ -45,7 +45,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="40dp"
                         android:layout_marginEnd="16dp"
-                        android:drawableEnd="@drawable/email"
+                    android:drawableEnd="@drawable/ic_user"
                         android:hint="@string/username"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:drawableEnd="@drawable/email"
+                    android:drawableEnd="@drawable/ic_lock"
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         app:layout_constraintEnd_toEndOf="@+id/username"
