--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,43 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_color"
-        tools:context=".splash.SplashActivity"
-        android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_color"
+    android:orientation="vertical"
+    tools:context=".splash.SplashActivity">
 
     <ImageView
-            android:id="@+id/image"
-            android:src="@drawable/wallet_white"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"/>
-    <TextView
-            android:id="@+id/text"
-            android:textColor="#fff"
-            android:gravity="center"
-            android:textSize="31sp"
-            android:text="@string/hajj_wallet"
-            android:textColorHighlight="@android:color/white"
-            android:layout_below="@id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/hafezah_logo_white" />
+
     <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="100dp"
-            android:minWidth="100dp"
-            android:progressTint="@android:color/white"
-            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
-            android:layout_marginRight="5dp"
-            android:indeterminate="true"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="162dp"
-            android:layout_marginTop="96dp"
-            android:layout_below="@+id/text"/>
+        android:id="@+id/progress_bar"
+        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="162dp"
+        android:indeterminate="true"
+        android:progressTint="@android:color/white" />
 
 </RelativeLayout>
