--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -6,16 +6,16 @@
     <group android:checkableBehavior="single">
         <item
                 android:id="@+id/nav_home"
-                android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/nav_home"
                 android:title="@string/menu_home"/>
         <item
                 android:id="@+id/nav_profile"
-                android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/nav_profile"
                 android:title="@string/profile"/>
 
         <item
                 android:id="@+id/nav_qr_scanner"
-                android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_qr_code"
                 android:title="@string/qr_scanner"/>
     </group>
 
