--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -4,12 +4,12 @@
     <item android:id="@+id/action_search"
           android:title="@string/action_settings"
           android:orderInCategory="100"
-          android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/search"
           app:showAsAction="always"/>
 
     <item android:id="@+id/action_filter"
           android:title="@string/action_settings"
           android:orderInCategory="100"
-          android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/filter"
           app:showAsAction="always"/>
 </menu>
