--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:showIn="navigation_view">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_home"
+            android:id="@+id/nav_home"
             android:icon="@drawable/nav_home"
-                android:title="@string/menu_home"/>
-        <item
-                android:id="@+id/nav_profile"
-            android:icon="@drawable/nav_profile"
-                android:title="@string/profile"/>
+            android:title="@string/menu_home" />
+        <!--<item-->
+        <!--android:id="@+id/nav_profile"-->
+        <!--android:icon="@drawable/nav_profile"-->
+        <!--android:title="@string/profile"/>-->
 
         <item
-                android:id="@+id/nav_qr_scanner"
+            android:id="@+id/nav_wallet"
+            android:icon="@drawable/ic_wallet"
+            android:title="@string/qr_scanner" />
+
+        <item
+            android:id="@+id/nav_qr_scanner"
             android:icon="@drawable/ic_qr_code"
-                android:title="@string/qr_scanner"/>
+            android:title="@string/qr_scanner" />
     </group>
 
 </menu>
